# LoRa-module-configuration-via-graphical-interface

./: CMakeLists.txt  LoraApp.pro  README.md  Wiki  configuration.py  console.cpp  console.h  constants.h  controller.cpp  controller.h  flog  logic.h  logic_console.h  lora.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver.py  testApp.cpp  tranceiver.py
LoraApp/: LoraApp.pro  controller.h  mainwindow.ui
tests/: controllerTest.cpp  controllerTest.h
